final evaluation/src/CmmParser.py
# Generated from Cmm.g4 by ANTLR 4.6
# encoding: utf-8
from antlr4 import *
from io import StringIO



class CmmParser ( Parser ):

    grammarFileName = "Cmm.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'''", "<INVALID>", "<INVALID>", "'#include'", 
                     "'stdio.h'", "'const'", "'void'", "'int'", "'float'", 
                     "'char'", "'if'", "'else'", "'while'", "'for'", "'break'", 
                     "'continue'", "'return'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'('", "')'", "'['", "']'", 
                     "'{'", "'}'", "'<'", "'<='", "'>'", "'>='", "'+'", 
                     "'++'", "'-'", "'--'", "'*'", "'/'", "'%'", "'&'", 
                     "'|'", "'&&'", "'||'", "'^'", "'!'", "'~'", "'?'", 
                     "':'", "';'", "','", "'='", "'=='", "'!='", "'->'", 
                     "'.'", "'#'" ]

    symbolicNames = [ "<INVALID>", "WS", "Newline", "BlockComment", "LineComment", 
                      "Apostrophe", "Character", "String", "Include", "Stdio", 
                      "Const", "Void", "Int", "Float", "Char", "If", "Else", 
                      "While", "For", "Break", "Continue", "Return", "Identifier", 
                      "NonZeroDigit", "ZeroDigit", "Nondigit", "LeftParen", 
                      "RightParen", "LeftBracket", "RightBracket", "LeftBrace", 
                      "RightBrace", "Less", "LessEqual", "Greater", "GreaterEqual", 
                      "Plus", "PlusPlus", "Minus", "MinusMinus", "Star", 
                      "Div", "Mod", "And", "Or", "AndAnd", "OrOr", "Caret", 
                      "Not", "Tilde", "Question", "Colon", "Semicolon", 
                      "Comma", "Assign", "Equal", "NotEqual", "Arrow", "Dot", 
                      "Pound" ]

    RULE_program = 0
    RULE_externalDeclaration = 1
    RULE_functionDeclaration = 2
    RULE_parameterList = 3
    RULE_parameterDeclaration = 4
    RULE_declaration = 5
    RULE_declarationSpecifier = 6
    RULE_typeSpecifier = 7
    RULE_initDeclarator = 8
    RULE_declarator = 9
    RULE_initializerList = 10
    RULE_primaryExpression = 11
    RULE_constant = 12
    RULE_integerConstant = 13
    RULE_floatingConstant = 14
    RULE_expression = 15
    RULE_functionCallExpression = 16
    RULE_arrayExpression = 17
    RULE_binaryOperator = 18
    RULE_atomExpression = 19
    RULE_multiplicativeExpression = 20
    RULE_additiveExpression = 21
    RULE_argumentExpressionList = 22
    RULE_statement = 23
    RULE_assignment = 24
    RULE_compoundStatement = 25
    RULE_ifStatement = 26
    RULE_iterationStatement = 27
    RULE_jumpStatement = 28

    ruleNames =  [ "program", "externalDeclaration", "functionDeclaration", 
                   "parameterList", "parameterDeclaration", "declaration", 
                   "declarationSpecifier", "typeSpecifier", "initDeclarator", 
                   "declarator", "initializerList", "primaryExpression", 
                   "constant", "integerConstant", "floatingConstant", "expression", 
                   "functionCallExpression", "arrayExpression", "binaryOperator", 
                   "atomExpression", "multiplicativeExpression", "additiveExpression", 
                   "argumentExpressionList", "statement", "assignment", 
                   "compoundStatement", "ifStatement", "iterationStatement", 
                   "jumpStatement" ]

    EOF = Token.EOF
    WS=1
    Newline=2
    BlockComment=3
    LineComment=4
    Apostrophe=5
    Character=6
    String=7
    Include=8
    Stdio=9
    Const=10
    Void=11
    Int=12
    Float=13
    Char=14
    If=15
    Else=16
    While=17
    For=18
    Break=19
    Continue=20
    Return=21
    Identifier=22
    NonZeroDigit=23
    ZeroDigit=24
    Nondigit=25
    LeftParen=26
    RightParen=27
    LeftBracket=28
    RightBracket=29
    LeftBrace=30
    RightBrace=31
    Less=32
    LessEqual=33
    Greater=34
    GreaterEqual=35
    Plus=36
    PlusPlus=37
    Minus=38
    MinusMinus=39
    Star=40
    Div=41
    Mod=42
    And=43
    Or=44
    AndAnd=45
    OrOr=46
    Caret=47
    Not=48
    Tilde=49
    Question=50
    Colon=51
    Semicolon=52
    Comma=53
    Assign=54
    Equal=55
    NotEqual=56
    Arrow=57
    Dot=58
    Pound=59

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.6")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CmmParser.EOF, 0)

        def externalDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CmmParser.ExternalDeclarationContext)
            else:
                return self.getTypedRuleContext(CmmParser.ExternalDeclarationContext,i)


        def getRuleIndex(self):
            return CmmParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = CmmParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CmmParser.Include) | (1 << CmmParser.Void) | (1 << CmmParser.Int) | (1 << CmmParser.Float) | (1 << CmmParser.Char))) != 0):
                self.state = 58
                self.externalDeclaration()
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 64
            self.match(CmmParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExternalDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionDeclaration(self):
            return self.getTypedRuleContext(CmmParser.FunctionDeclarationContext,0)


        def declaration(self):
            return self.getTypedRuleContext(CmmParser.DeclarationContext,0)


        def Include(self):
            return self.getToken(CmmParser.Include, 0)

        def Less(self):
            return self.getToken(CmmParser.Less, 0)

        def Stdio(self):
            return self.getToken(CmmParser.Stdio, 0)

        def Greater(self):
            return self.getToken(CmmParser.Greater, 0)

        def getRuleIndex(self):
            return CmmParser.RULE_externalDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExternalDeclaration" ):
                listener.enterExternalDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExternalDeclaration" ):
                listener.exitExternalDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExternalDeclaration" ):
                return visitor.visitExternalDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def externalDeclaration(self):

        localctx = CmmParser.ExternalDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_externalDeclaration)
        try:
            self.state = 72
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 66
                self.functionDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 67
                self.declaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 68
                self.match(CmmParser.Include)
                self.state = 69
                self.match(CmmParser.Less)
                self.state = 70
                self.match(CmmParser.Stdio)
                self.state = 71
                self.match(CmmParser.Greater)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarationSpecifier(self):
            return self.getTypedRuleContext(CmmParser.DeclarationSpecifierContext,0)


        def Identifier(self):
            return self.getToken(CmmParser.Identifier, 0)

        def LeftParen(self):
            return self.getToken(CmmParser.LeftParen, 0)

        def RightParen(self):
            return self.getToken(CmmParser.RightParen, 0)

        def compoundStatement(self):
            return self.getTypedRuleContext(CmmParser.CompoundStatementContext,0)


        def parameterList(self):
            return self.getTypedRuleContext(CmmParser.ParameterListContext,0)


        def Semicolon(self):
            return self.getToken(CmmParser.Semicolon, 0)

        def getRuleIndex(self):
            return CmmParser.RULE_functionDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDeclaration" ):
                listener.enterFunctionDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDeclaration" ):
                listener.exitFunctionDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDeclaration" ):
                return visitor.visitFunctionDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def functionDeclaration(self):

        localctx = CmmParser.FunctionDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_functionDeclaration)
        self._la = 0 # Token type
        try:
            self.state = 92
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 74
                self.declarationSpecifier()
                self.state = 75
                self.match(CmmParser.Identifier)
                self.state = 76
                self.match(CmmParser.LeftParen)
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CmmParser.Void) | (1 << CmmParser.Int) | (1 << CmmParser.Float) | (1 << CmmParser.Char))) != 0):
                    self.state = 77
                    self.parameterList(0)


                self.state = 80
                self.match(CmmParser.RightParen)
                self.state = 81
                self.compoundStatement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 83
                self.declarationSpecifier()
                self.state = 84
                self.match(CmmParser.Identifier)
                self.state = 85
                self.match(CmmParser.LeftParen)
                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CmmParser.Void) | (1 << CmmParser.Int) | (1 << CmmParser.Float) | (1 << CmmParser.Char))) != 0):
                    self.state = 86
                    self.parameterList(0)


                self.state = 89
                self.match(CmmParser.RightParen)
                self.state = 90
                self.match(CmmParser.Semicolon)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParameterListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameterDeclaration(self):
            return self.getTypedRuleContext(CmmParser.ParameterDeclarationContext,0)


        def parameterList(self):
            return self.getTypedRuleContext(CmmParser.ParameterListContext,0)


        def Comma(self):
            return self.getToken(CmmParser.Comma, 0)

        def getRuleIndex(self):
            return CmmParser.RULE_parameterList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterList" ):
                listener.enterParameterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterList" ):
                listener.exitParameterList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterList" ):
                return visitor.visitParameterList(self)
            else:
                return visitor.visitChildren(self)



    def parameterList(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = CmmParser.ParameterListContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_parameterList, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.parameterDeclaration()
            self._ctx.stop = self._input.LT(-1)
            self.state = 102
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = CmmParser.ParameterListContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_parameterList)
                    self.state = 97
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 98
                    self.match(CmmParser.Comma)
                    self.state = 99
                    self.parameterDeclaration() 
                self.state = 104
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class ParameterDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarationSpecifier(self):
            return self.getTypedRuleContext(CmmParser.DeclarationSpecifierContext,0)


        def declarator(self):
            return self.getTypedRuleContext(CmmParser.DeclaratorContext,0)


        def getRuleIndex(self):
            return CmmParser.RULE_parameterDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterDeclaration" ):
                listener.enterParameterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterDeclaration" ):
                listener.exitParameterDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterDeclaration" ):
                return visitor.visitParameterDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def parameterDeclaration(self):

        localctx = CmmParser.ParameterDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_parameterDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.declarationSpecifier()
            self.state = 106
            self.declarator()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarationSpecifier(self):
            return self.getTypedRuleContext(CmmParser.DeclarationSpecifierContext,0)


        def initDeclarator(self):
            return self.getTypedRuleContext(CmmParser.InitDeclaratorContext,0)


        def Semicolon(self):
            return self.getToken(CmmParser.Semicolon, 0)

        def getRuleIndex(self):
            return CmmParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = CmmParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.declarationSpecifier()
            self.state = 109
            self.initDeclarator()
            self.state = 110
            self.match(CmmParser.Semicolon)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclarationSpecifierContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeSpecifier(self):
            return self.getTypedRuleContext(CmmParser.TypeSpecifierContext,0)


        def Star(self, i:int=None):
            if i is None:
                return self.getTokens(CmmParser.Star)
            else:
                return self.getToken(CmmParser.Star, i)

        def getRuleIndex(self):
            return CmmParser.RULE_declarationSpecifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclarationSpecifier" ):
                listener.enterDeclarationSpecifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclarationSpecifier" ):
                listener.exitDeclarationSpecifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclarationSpecifier" ):
                return visitor.visitDeclarationSpecifier(self)
            else:
                return visitor.visitChildren(self)




    def declarationSpecifier(self):

        localctx = CmmParser.DeclarationSpecifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_declarationSpecifier)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.typeSpecifier()
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CmmParser.Star:
                self.state = 113
                self.match(CmmParser.Star)
                self.state = 118
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypeSpecifierContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Void(self):
            return self.getToken(CmmParser.Void, 0)

        def Char(self):
            return self.getToken(CmmParser.Char, 0)

        def Int(self):
            return self.getToken(CmmParser.Int, 0)

        def Float(self):
            return self.getToken(CmmParser.Float, 0)

        def getRuleIndex(self):
            return CmmParser.RULE_typeSpecifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeSpecifier" ):
                listener.enterTypeSpecifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeSpecifier" ):
                listener.exitTypeSpecifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeSpecifier" ):
                return visitor.visitTypeSpecifier(self)
            else:
                return visitor.visitChildren(self)




    def typeSpecifier(self):

        localctx = CmmParser.TypeSpecifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_typeSpecifier)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CmmParser.Void) | (1 << CmmParser.Int) | (1 << CmmParser.Float) | (1 << CmmParser.Char))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InitDeclaratorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarator(self):
            return self.getTypedRuleContext(CmmParser.DeclaratorContext,0)


        def Identifier(self):
            return self.getToken(CmmParser.Identifier, 0)

        def Assign(self):
            return self.getToken(CmmParser.Assign, 0)

        def expression(self):
            return self.getTypedRuleContext(CmmParser.ExpressionContext,0)


        def initializerList(self):
            return self.getTypedRuleContext(CmmParser.InitializerListContext,0)


        def getRuleIndex(self):
            return CmmParser.RULE_initDeclarator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInitDeclarator" ):
                listener.enterInitDeclarator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInitDeclarator" ):
                listener.exitInitDeclarator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitDeclarator" ):
                return visitor.visitInitDeclarator(self)
            else:
                return visitor.visitChildren(self)




    def initDeclarator(self):

        localctx = CmmParser.InitDeclaratorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_initDeclarator)
        try:
            self.state = 129
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 121
                self.declarator()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 122
                self.match(CmmParser.Identifier)
                self.state = 123
                self.match(CmmParser.Assign)
                self.state = 124
                self.expression(0)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 125
                self.declarator()
                self.state = 126
                self.match(CmmParser.Assign)
                self.state = 127
                self.initializerList()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclaratorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(CmmParser.Identifier, 0)

        def LeftBracket(self):
            return self.getToken(CmmParser.LeftBracket, 0)

        def integerConstant(self):
            return self.getTypedRuleContext(CmmParser.IntegerConstantContext,0)


        def RightBracket(self):
            return self.getToken(CmmParser.RightBracket, 0)

        def getRuleIndex(self):
            return CmmParser.RULE_declarator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclarator" ):
                listener.enterDeclarator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclarator" ):
                listener.exitDeclarator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclarator" ):
                return visitor.visitDeclarator(self)
            else:
                return visitor.visitChildren(self)




    def declarator(self):

        localctx = CmmParser.DeclaratorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_declarator)
        try:
            self.state = 137
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 131
                self.match(CmmParser.Identifier)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 132
                self.match(CmmParser.Identifier)
                self.state = 133
                self.match(CmmParser.LeftBracket)
                self.state = 134
                self.integerConstant()
                self.state = 135
                self.match(CmmParser.RightBracket)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InitializerListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LeftBrace(self):
            return self.getToken(CmmParser.LeftBrace, 0)

        def RightBrace(self):
            return self.getToken(CmmParser.RightBrace, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CmmParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(CmmParser.ExpressionContext,i)


        def Comma(self, i:int=None):
            if i is None:
                return self.getTokens(CmmParser.Comma)
            else:
                return self.getToken(CmmParser.Comma, i)

        def getRuleIndex(self):
            return CmmParser.RULE_initializerList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInitializerList" ):
                listener.enterInitializerList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInitializerList" ):
                listener.exitInitializerList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitializerList" ):
                return visitor.visitInitializerList(self)
            else:
                return visitor.visitChildren(self)




    def initializerList(self):

        localctx = CmmParser.InitializerListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_initializerList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(CmmParser.LeftBrace)
            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CmmParser.Character) | (1 << CmmParser.String) | (1 << CmmParser.Identifier) | (1 << CmmParser.NonZeroDigit) | (1 << CmmParser.ZeroDigit) | (1 << CmmParser.LeftParen) | (1 << CmmParser.Plus) | (1 << CmmParser.Minus) | (1 << CmmParser.Star) | (1 << CmmParser.And) | (1 << CmmParser.Dot))) != 0):
                self.state = 140
                self.expression(0)


            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CmmParser.Comma:
                self.state = 143
                self.match(CmmParser.Comma)
                self.state = 144
                self.expression(0)
                self.state = 149
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 150
            self.match(CmmParser.RightBrace)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PrimaryExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(CmmParser.Identifier, 0)

        def constant(self):
            return self.getTypedRuleContext(CmmParser.ConstantContext,0)


        def getRuleIndex(self):
            return CmmParser.RULE_primaryExpression
